--- a/Vibrosi/Panel.cfg
+++ b/Vibrosi/Panel.cfg
@@ -204,7 +204,7 @@
   </xs:schema>
   <ProjectTable>
     <Name>Vibrosi</Name>
-    <Location>D:\Projects</Location>
+    <Location>D:\Projects\Vibrosi_git</Location>
     <Resolution>HMI750 (800*480)</Resolution>
     <Author />
     <Comments />
@@ -225,7 +225,7 @@
     <LogoutExpression />
     <NetworkAuthorization>0</NetworkAuthorization>
     <LogDataPath>0</LogDataPath>
-    <TotalDesignTime>P48DT5H56M25.0445753S</TotalDesignTime>
+    <TotalDesignTime>P48DT5H56M45.7190237S</TotalDesignTime>
     <Password />
     <DataSubVer>0</DataSubVer>
     <AlarmSampingRate>1000</AlarmSampingRate>
