--- a/Vibrosi_Mogilev_TEC1/Panel.cfg
+++ b/Vibrosi_Mogilev_TEC1/Panel.cfg
@@ -225,7 +225,7 @@
     <LogoutExpression />
     <NetworkAuthorization>0</NetworkAuthorization>
     <LogDataPath>0</LogDataPath>
-    <TotalDesignTime>P17DT21H53M9.3902531S</TotalDesignTime>
+    <TotalDesignTime>P17DT21H57M50.1096466S</TotalDesignTime>
     <Password />
     <DataSubVer>0</DataSubVer>
     <AlarmSampingRate>1000</AlarmSampingRate>
@@ -792,7 +792,7 @@ path_usb="\\Hard Disk\\";
 
 
 //инверсия аварий газанализатора
-//if (IO_DI16_1_ch_01_gazanal_a==0){G_A=1;}else{G_A=0;}
+if (IO_DI16_1_ch_01_gazanal_a==0){G_A=1;}else{G_A=0;}
 ///////if (IO_DI16_1_ch_06_neisp_rashod_a==0){R_A=0;}else{G_A=1;}
 ///////if (IO_DI16_1_ch_02_gazanal_b==0){G_B=1;}else{G_B=0;}
 STOP=1;//оборудование в работе!!!
@@ -1623,7 +1623,7 @@ Gl_Scr_2.DigitalBox36.Value=sred_konc_7; //CH4_20
 
 if (ras_const==1)
 {
-// Сi(сред конц за 20 мин.)= ModbusSlaveTCP_PC_MCD_0 /( (0,001*35,16)/к * (сред за 20 мин. Вg)/3600  )
+// Сi(сред конц за 20 мин.)= ModbusSlaveTCP_PC_MCD_0 /( (0,001*35,16)/к * (сред за 20 мин. Вg)/3600  )
      sred_konc_1=ModbusSlaveTCP_PC_MCD_0 /  ( 10000.0/3600.0 * (0.001*35.16 /1.078)  );//CO
      sred_konc_2=ModbusSlaveTCP_PC_MCD_1 /  ( 10000.0/3600.0 * 35.16 /1.078 *0.001 );//NO     
      sred_konc_3=ModbusSlaveTCP_PC_MCD_4 /  ( 10000.0/3600.0 * 35.16 /1.078 *0.001 );//NO2
@@ -1709,7 +1709,7 @@ H20M_Cnt++;
 System.IO.StreamWriter file1 = new System.IO.StreamWriter(path+"Hour.csv");
 System.IO.StreamWriter file_cur = new System.IO.StreamWriter(path+"current.csv",true);///для Лёши
 
-// (0,001*35,16)/к * (сред за 20 мин. Вg)/3600 * Сi(сред конц за 20 мин.)
+// (0,001*35,16)/к * (сред за 20 мин. Вg)/3600 * Сi(сред конц за 20 мин.)
 str00 = str40;
 str40 = str20;
 str20 = DateTime.Now.ToString("dd.MM.yyyy HH:mm:ss") + ";" + (sred_konc_1*sred_konc_8_g/3600 * 35.16 /sred_konc_8_m *0.001).ToString() + ";" + (sred_konc_2*sred_konc_8_g/3600 * 35.16 /sred_konc_8_m *0.001).ToString() + ";" + 
@@ -2526,6 +2526,9 @@ if (hard_reset&gt;5)
 total_1_const=0;
 total_2_const=0;
 total_3_const=0;
+total_4_const=0;
+total_6_const=0;
+total_K_const_a=0;
 
 total_8_g_const=0;
 total_T_const_a=0;
@@ -2579,18 +2582,18 @@ total_K_const_a+=ModbusSlaveTCP_PC_MCD_8;           //сред K
 MCD_8=total_K_const_a/s_const_a;
 
 
-// (0,001*35,16)/к * (сред за 20 мин. Вg)/3600 * Сi(сред конц за 20 мин.)
+// (0,001*35,16)/к * (сред за 20 мин. Вg)/3600 * Сi(сред конц за 20 мин.)
 
 //for stupid people
 CO_ras_const_G=(MCD_0*1.25*(21/(21-MCD_2))/3.5) * (MCD_9/3600) * (0.001*35.16) / MCD_8 ;
 
-NO_ras_const_G=(MCD_1*2.05*(21/(21-MCD_2))/3.5)*0.13 * (MCD_9/3600) * (0.001*35.16) / MCD_8 ;
+NO_ras_const_G=(MCD_1*2.054*(21/(21-MCD_2))/3.5)*0.13 * (MCD_9/3600) * (0.001*35.16) / MCD_8 ;
 
-NO2_ras_const_G=(MCD_6*2.05*(21/(21-MCD_2))/3.5)*0.8 * (MCD_9/3600) * (0.001*35.16) / MCD_8 ;
+NO2_ras_const_G=(MCD_1*2.054*(21/(21-MCD_2))/3.5)*0.8 * (MCD_9/3600) * (0.001*35.16) / MCD_8 ;
 
 CO2_ras_const_G=(MCD_5*1.96*(21/(21-MCD_2))/3.5)*10000 * (MCD_9/3600) * (0.001*35.16) / MCD_8 ;
 
-NOx_ras_const_G=(MCD_6*2.05*(21/(21-MCD_2))/3.5) * (MCD_9/3600) * (0.001*35.16) / MCD_8 ;
+NOx_ras_const_G=(MCD_1*2.054*(21/(21-MCD_2))/3.5) * (MCD_9/3600) * (0.001*35.16) / MCD_8 ;
 
 CH4_ras_const_G=(MCD_3*0.72*(21/(21-MCD_2))/3.5) * (MCD_9/3600) * (0.001*35.16) / MCD_8 ;
 
@@ -2633,8 +2636,7 @@ LogEvent("Set define","успех","Настройка остановленна.
 
 
 TimeSpan ts=new TimeSpan (0,0,s_const_a) ;
-Pref.Label58.Text=ts.Days.ToString() + "d " + ts.Hours.ToString("00") + ":" +   ts.Minutes.ToString("00") + ":"  + ts.Seconds.ToString("00") ;
-</Expression>
+Pref.Label58.Text=ts.Days.ToString() + "d " + ts.Hours.ToString("00") + ":" +   ts.Minutes.ToString("00") + ":"  + ts.Seconds.ToString("00") ;</Expression>
   </Function>
   <SystemTag>
     <Name>CurrentPage</Name>
