--- a/build_Mogilev_TEC1/Panel/Tag.cfg
+++ b/build_Mogilev_TEC1/Panel/Tag.cfg
@@ -4621,7 +4621,7 @@
     <Type>Analog</Type>
     <Gain>1</Gain>
     <Offset>0</Offset>
-    <Scan>0</Scan>
+    <Scan>1</Scan>
     <DefaultValue>0</DefaultValue>
     <DefaultString />
     <Maximum>100</Maximum>
@@ -5844,7 +5844,7 @@
     <Gain>1</Gain>
     <Offset>0</Offset>
     <Scan>0</Scan>
-    <DefaultValue>0</DefaultValue>
+    <DefaultValue>21</DefaultValue>
     <DefaultString />
     <Maximum>100</Maximum>
     <Minimum>-100</Minimum>
@@ -5869,7 +5869,7 @@
     <Type>Analog</Type>
     <Gain>1</Gain>
     <Offset>0</Offset>
-    <Scan>0</Scan>
+    <Scan>1</Scan>
     <DefaultValue>0</DefaultValue>
     <DefaultString />
     <Maximum>100</Maximum>
@@ -5932,6 +5932,214 @@
     <DefaultDigital>0</DefaultDigital>
     <DetailType />
     <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>poverka_AI6_1_ch_1</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>0</Scan>
+    <DefaultValue>4000</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>poverka_AI6_1_ch_2</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>0</Scan>
+    <DefaultValue>4000</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>poverka_AI6_1_ch_3</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>0</Scan>
+    <DefaultValue>4000</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>poverka_AI6_1_ch_4</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>0</Scan>
+    <DefaultValue>4000</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>poverka_AI6_1_ch_5</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>0</Scan>
+    <DefaultValue>4000</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>poverka_AI6_1_ch_6</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>0</Scan>
+    <DefaultValue>4000</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>poverka</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>1</Scan>
+    <DefaultValue>1</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>1</DefaultDigital>
+    <DetailType />
+    <Retentive>1</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>sim</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>1</Scan>
+    <DefaultValue>1</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>1</DefaultDigital>
+    <DetailType />
+    <Retentive>1</Retentive>
     <ByteCount>4</ByteCount>
     <ReadOnly>0</ReadOnly>
     <SimulationIdx>0</SimulationIdx>
@@ -12773,6 +12981,136 @@
     <ConvertIdx>0</ConvertIdx>
   </TagTable>
   <TagTable>
+    <Name>znach_44</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>1</Scan>
+    <DefaultValue>0</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>ch01_s_Hi</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>0</Scan>
+    <DefaultValue>21</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>1</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>ch01_s_Lo</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>0</Scan>
+    <DefaultValue>0</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>1</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>poverka_AI6_2_ch_6</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>0</Scan>
+    <DefaultValue>4000</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>Kizm</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>1</Scan>
+    <DefaultValue>0</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
     <Name>IO_BaudRate</Name>
     <Connection>OPCMODBUS</Connection>
     <Type>Analog</Type>
@@ -13769,6 +14107,32 @@
     <TypeIdx>0</TypeIdx>
     <RunModeType>0</RunModeType>
     <ScanMode>1</ScanMode>
+    <ConvertIdx>0</ConvertIdx>
+  </TagTable>
+  <TagTable>
+    <Name>STOP_hist</Name>
+    <Connection>Internal Memory</Connection>
+    <Type>Analog</Type>
+    <Gain>1</Gain>
+    <Offset>0</Offset>
+    <Scan>1</Scan>
+    <DefaultValue>1</DefaultValue>
+    <DefaultString />
+    <Maximum>100</Maximum>
+    <Minimum>-100</Minimum>
+    <Cycle>400</Cycle>
+    <ScanRate>100</ScanRate>
+    <Register />
+    <DefaultDigital>0</DefaultDigital>
+    <DetailType />
+    <Retentive>0</Retentive>
+    <ByteCount>4</ByteCount>
+    <ReadOnly>0</ReadOnly>
+    <SimulationIdx>0</SimulationIdx>
+    <ConnectionIdx>0</ConnectionIdx>
+    <TypeIdx>1</TypeIdx>
+    <RunModeType>0</RunModeType>
+    <ScanMode>3</ScanMode>
     <ConvertIdx>0</ConvertIdx>
   </TagTable>
 </TagDataSet>
