--- a/build_Mogilev_TEC1/Panel/Panel.cfg
+++ b/build_Mogilev_TEC1/Panel/Panel.cfg
@@ -204,7 +204,7 @@
   </xs:schema>
   <ProjectTable>
     <Name>Vibrosi_Mogilev_TEC1</Name>
-    <Location>D:\Projects\Vibrosi_git</Location>
+    <Location>D:\NorthernHell\Vibrosi_git</Location>
     <Resolution>HMI750 (800*480)</Resolution>
     <Author />
     <Comments />
@@ -225,8 +225,8 @@
     <LogoutExpression />
     <NetworkAuthorization>0</NetworkAuthorization>
     <LogDataPath>0</LogDataPath>
-    <TotalDesignTime>P23DT23H50M36.4702033S</TotalDesignTime>
-    <Password />
+    <TotalDesignTime>P24DT42M34.726405S</TotalDesignTime>
+    <Password>01091939</Password>
     <DataSubVer>0</DataSubVer>
     <AlarmSampingRate>1000</AlarmSampingRate>
     <DefaultTagScan>100</DefaultTagScan>
